# Kamilya-NEW

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOY.md  DESIGN.md  Foundation.md  PROGRESS.md  PROJECT.md  README.md  ROADMAP.md  TZ.md  WCAG.md  check_rls.sql  check_tenant_cols.sql  create_admin.py  create_tenant.sql  docker-compose.monitoring.yml  docker-compose.yml  nx.json  package-lock.json  package.json  render.yaml  repomix-output.md  temp_openapi.json  test_upload_generation.py  tox.ini  upload_generation.ps1
apps/api/: .env.example  Dockerfile  alembic.ini  openapi.json  pyproject.toml  requirements.txt  tsconfig.json
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_course_structure.py  0003_add_enrollment_progress_documents.py  0004_add_ai_jobs.py  0005_add_quiz_attempts_certificates.py  0006_add_audit_logs.py  0007_add_positions_job_descriptions.py  0008_merge_positions_job_descriptions.py  0009_add_document_description.py  0010_sync_schema_positions_and_documents.py  0011_bootstrap_positions_and_documents.py  0012_add_deferral_days.py  0012_add_user_role_is_active.py  0013_rls_tenant_isolation.sql  0013b_rls_fix.sql  0013c_rls_fix2.sql  0013d_rls_final.sql  0013e_rls_correct.sql  0014_fix_documents_rename.py  0015_add_documents_file_url_updated_at.py  0016_add_audit_user_agent.py  0017_add_deferral_days.py  0018_add_document_embeddings.py  0019_rls_policies.py  0020_add_progress_completed_at.py  0021_add_embedding_status.py  0022_add_position_jd_versions.py  0023_add_position_quizzes.py  0024_add_user_invitations.py  0025_add_personnel_number_and_invitation_audit.py  (+48 more)
apps/api/app/: main.py
apps/api/tests/: conftest.py  test_admin_p0.py  test_ai_jobs_rbac.py  test_ai_pipeline_existing_course.py  test_announcements_recipients.py  test_assignment_service.py  test_auth.py  test_auth_service.py  test_auth_tenant_context.py  test_batch_service.py  test_certificate_pdf.py  test_course_release_policy.py  test_courses_models.py  test_departments_batch_router.py  test_departments_list_router.py  test_departments_router.py  test_enroll_users_validation.py  test_enrollments_rbac.py  test_integration.py  test_invitation_role_contract.py  test_invitations_rbac.py  test_kiosk_admin.py  test_kiosk_jwt.py  test_kiosk_public_rls.py  test_llm_failover.py  test_methodologist_role.py  test_positions_bulk.py  test_positions_courses_router.py  test_positions_jd_route_contracts.py  test_provider_keys.py  test_quiz_ai.py  test_quiz_deferral.py  test_renderer.py  test_reviewer.py  test_role_aliases.py  test_role_boundaries.py  test_setup_storage_bucket.py  test_staff_import_apply_rules_inline.py  test_staff_import_status_router.py  test_storage.py  (+3 more)
(+555 files in other folders)
