# Backend monorepo config
[tool.poetry]
name = "api"
version = "0.1.0"
description = "Kamilya LMS API"
authors = ["Kamilya Team <dev@kml.kz>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0.35"
asyncpg = "^0.30"
pydantic = "^2.9"
pydantic-settings = "^2.5"
pyjwt = "^2.10"
argon2-cffi = "^23.1"
celery = "^5.4"
redis = "^5.2"
python-multipart = "^0.0.17"
alembic = "^1.14"
httpx = "^0.27"
chromadb = "^0.6"
docling = "^2.0"
websockets = "^14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.8"
mypy = "^1.13"
httpx = "^0.27"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
