# Backend monorepo config
[tool.poetry]
name = "api"
version = "0.1.0"
description = "Kamilya LMS API"
authors = ["Kamilya Team <dev@kml.kz>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.32"}
sqlalchemy = "^2.0.35"
asyncpg = "^0.30"
pydantic = "^2.9"
pydantic-settings = "^2.5"
email-validator = "^2.0"
pyjwt = "^2.10"
argon2-cffi = "^23.1"
celery = "^5.4"
redis = "^5.2"
python-multipart = "^0.0.17"
alembic = "^1.14"
httpx = "^0.27"
websockets = "^14.0"
openpyxl = "^3.1"
pypdf = "^4.0"
python-docx = "^1.1"
json-repair = "^0.7"
supabase = "^2.0"
cryptography = "^42.0"
aiosmtplib = "^3.0"
jinja2 = "^3.1"
fpdf2 = "^2.8"
packages = {path = "../../packages", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.8"
mypy = "^1.13"
httpx = "^0.27"

[tool.poetry.group.observability.dependencies]
# Sentry SDK with FastAPI + SQLAlchemy + asyncpg integrations.
# Activated only when SENTRY_DSN env var is set (see app/main.py).
# Optional group so apps without observability needs can `poetry install --without observability`.
sentry-sdk = {extras = ["fastapi"], version = "^2.0"}
python-json-logger = "^2.0"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
